--- a/_templates/global/GeneralPage.html
+++ b/_templates/global/GeneralPage.html
@@ -27,7 +27,7 @@
     {% endif %}
     {% if js_vars|default(False) %}
     <script>var js_vars = {{ js_vars| json }};</script>{% endif %}
-    <form class="otree-form" method="post" role="form" id="form" autocomplete="off">{% csrf_token %}
+    <form class="otree-form" method="post" role="form" id="form" autocomplete="off">
         <div class="_otree-content">{% block content %}{% endblock %}</div>
     </form>
     <br />
@@ -38,3 +38,4 @@
     {% endif %}
 </div>
 {% endblock %}
+
